# federated-recommendations-participants

./: .env.example  .gitignore  INSTALL-Linux.md  INSTALL-Windows.md  INSTALL-macOS.md  README.md  TECHNICAL_NOTES_DRAFT.txt  app.py  install.ps1  install.sh  pyproject.toml
data/: augmented_titles.csv  imdb_titles_extended.csv
scripts/: demo_normalization.py  inspect_matrices.py
src/: __init__.py  config.py  core.py  preflight.py
src/api/: routes.py
src/federated_learning/: __init__.py  bpr_dp.py  bpr_participant_finetuning.py  bpr_participant_local_recommendation.py  sequence_data.py
src/fetcher/: __init__.py  netflix_fetcher.py
src/loaders/: __init__.py  netflix_loader.py
src/services/: data_loading.py  enrichment.py  federated_learning.py  io.py  recommendations.py
ui/: history.html  index.html
ui/css/: styles.css
ui/js/: api.js  app.js  feedback.js  modal.js  opt_out.js  settings.js
