[project]
name = "syftbox-netflix-participant"
version = "0.1.0"
description = "SyftBox Netflix BPR Participant - Local Recommendations UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv==1.0.1",
    "pandas",
    "numpy",
    "rapidfuzz",
    "scikit-learn",
    "selenium",
    "pyyaml",
    "fastsyftbox>=0.1.12",
    "syft-core>=0.2.5",
    "sentence-transformers",
    "fastapi[standard]",
    "matplotlib",
    "python-multipart"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
]
